--- a/style.css
+++ b/style.css
@@ -661,3 +661,14 @@ body, head, html{
 .search:focus{
     outline: none;
 }
+
+#bs{
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 100000000000000000000000000000000000000000000000000000;
+}
